--- a/assets/CSS/portfolio.css
+++ b/assets/CSS/portfolio.css
@@ -1,7 +1,7 @@
 
 .portfolio {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: flex-start;
     width: 100%;
 
