--- a/assets/CSS/portfolio.css
+++ b/assets/CSS/portfolio.css
@@ -43,6 +43,6 @@
     height: 2rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url('../img/icons/github.svg');
+    background-image: url('assets/img/icons/github.svg');
     margin-right: .5rem;
 }
