--- a/assets/CSS/global.css
+++ b/assets/CSS/global.css
@@ -43,7 +43,7 @@ a:hover {
 }
 .main::after {
     content: '';
-    background-image: url('../img/background-top.svg');
+    background-image: url('assets/img/background-top.svg');
     background-repeat: no-repeat;
     background-size: contain;
     display: inline-block;
